Remove unused code and command-line arguments
- Remove ReflectionUtils.addUserAgentStylesheet since it is no longer
  used as a result of fixing #1245.
- Remove the Java 9 related --add-exports arguments in build.gradle.
  These arguments were used to export com.sun.javafx.css to ControlsFX
  but are no longer needed now that GlyphFont does not use reflection
  to add a user-agent style sheet. Note there were two of the exact same
  argument.